style1.css, style2.css, style3.css, style4.css fonctionnels TP fini à 98%, problème de couleur du sous menu appetizers lors du focus

--- a/tp2Input/index.html
+++ b/tp2Input/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Lorem ipsum dolor sit amet</title>
+    
     <link href="style1.css" rel="stylesheet">
+    <link href="style2.css" rel="stylesheet">
+    <link href="style3.css" rel="stylesheet">
+    <link href="style4.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 </head>
 <body>
